--- a/quickstart-automate/cloudbuild.yaml
+++ b/quickstart-automate/cloudbuild.yaml
@@ -12,8 +12,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+
 # [START cloudbuild_quickstart_automate]
 steps:
-  - name: golang
-    args: ['go', 'run', 'quickstart-automate/main.go']
+- name: golang
+  script: go run quickstart-automate/main.go 
+options:
+  logging: CLOUD_LOGGING_ONLY 
+#steps:
+#  - name: golang
+#    args: ['go', 'run', 'quickstart-automate/main.go']
 # [END cloudbuild_quickstart_automate]
