--- a/quickstart-automate/cloudbuild.yaml
+++ b/quickstart-automate/cloudbuild.yaml
@@ -19,7 +19,7 @@ steps:
 script: go run quickstart-automate/main.go 
 options:
   logging: CLOUD_LOGGING_ONLY 
-#steps:
-#  - name: golang
-#    args: ['go', 'run', 'quickstart-automate/main.go']
-# [END cloudbuild_quickstart_automate]
+steps:
+  - name: golang
+    args: ['go', 'run', 'quickstart-automate/main.go']
+ [END cloudbuild_quickstart_automate]
